removed context path and profiles